# ris-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: aliases.py  content.py  index.py  ris_client.py  server.py
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  index.css  main.jsx
website/src/components/: Footer.jsx  Hero.jsx  Navbar.jsx  OutroSection.jsx  SetupSection.jsx  ToolsGrid.jsx  WhatSection.jsx
