[project]
name = "ris-mcp"
version = "0.1.0"
description = "MCP server for Austria's RIS (Rechtsinformationssystem)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.1",
    "cachetools>=5.3.0",
    "selectolax>=0.3.21",
]

[project.scripts]
ris-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
